Prevent comment restyle flicker

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@ body {
   background-color: #f2f2f2;
 }
 
+html[data-zen-hn-restyled="loading"] table.comment-tree {
+  visibility: hidden;
+}
+
+html[data-zen-hn-restyled="true"] table.comment-tree {
+  display: none;
+}
+
+
 #hn-comment-list {
   display: flex;
   flex-direction: column;
@@ -83,9 +92,6 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: #222222;
-}
-
-.hn-comment[data-has-children="true"] .hn-comment-text {
   margin-left: 44px;
 }
 
